--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FR2433_CC1101_Send_Reg</name>
+	<name>FR2433_CC1101_Send_REG</name>
 	<comment></comment>
 	<projects>
 	</projects>
