--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /Debug/
+/Debug__opt_for_speed__0/
+/Debug__opt_for_speed__1/
+/Debug__opt_for_speed__2/
+/Debug__opt_for_speed__3/
+/Debug__opt_for_speed__4/
+/Debug__opt_for_speed__5/
